--- a/css/gecko.css
+++ b/css/gecko.css
@@ -1,3 +1,33 @@
 .center {
 	text-align: center;
 }
+
+#header-bar {
+  padding: 0;
+  line-height: 40px;
+  height: 40px;
+  background: #525252;
+  background: #5a8db6 url(../img/devoops_pattern_b10.png) 0 0 repeat;
+  margin-bottom: 20px;
+}
+.header-bar {
+  padding: 0 15px;
+  background: none;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  margin: 0;
+}
+
+#header-bar h3 {
+	color: #ffffff;
+	padding-top: 6px;
+	padding-left: 12px;
+}
+
+.header-bar > li > a {
+  color:#d8d8d8;
+}
+.header-bar > li > a:hover, .header-bar > li:last-child > a {
+  color:#f8f8f8;
+}
